# LightPromptApp

./: .replit  CONVERTKIT_INTEGRATION.md  EMAIL_MARKETING_SETUP.md  LIGHTPROMPT_VISION.md  RECOMMENDATIONS.md  SENDGRID_STATUS.md  SENDGRID_TROUBLESHOOTING.md  SOUL_TECH_COMPLETE.md  astro_api.py  geoprompt_checkins.sql  index.html  init_supabase_tables.sql  lightprompt-course-content.md  lightprompt-ed-novel-content.md  package-lock.json  package.json  pyproject.toml  replit.md  soul-map-cosmos-content.md  tailwind.config.ts  test_knowledge_api.js
attached_assets/: Pasted-1-LightPromptBot-json-Copy-Edit-id-lightpromptbot-name-LightPromptBot-tagline--1754587963704_1754587963705.txt  Pasted-Here-s-how-to-make-Soul-Map-actually-accurate-without-bloating-the-client-What-to-fix-fast-Moon--1754947631837_1754947631838.txt  Pasted-Quick-game-plan-Stack-Python-on-Replit-with-FastAPI-for-a-tiny-API-Ephemeris-Use-Swiss-Ephemeris-1754881883848_1754881883849.txt  Pasted-What-to-fix-fast-Moon-phase-calculate-from-astronomy-not-a-timer-Planetary-positions-comput-1754948541058_1754948541059.txt  Pasted-import-useEffect-useMemo-useRef-useState-from-react-import-DragDropContext-Droppable-D-1755122398305_1755122398306.txt
client/: index.html
client/src/: App.tsx  index.css
client/types/: cms.ts
server/: astro-engine.ts  astrology.ts  consciousAI.ts  convertkit.ts  databaseStorage.ts  email-marketing.ts  email-test.ts  knowledgeStorage.ts  lightpromptKnowledge.ts  openai.ts  replitDatabase.ts  routes.ts  storage.ts  supabase.ts  supabaseStorage.ts
shared/: schema.ts
src/: app.tsx
(+150 files in other folders)
